Update WhatsApp button to match gold/copper theme

--- a/index.html
+++ b/index.html
@@ -704,26 +704,27 @@
             right: 2rem;
             width: 60px;
             height: 60px;
-            background: #25D366;
+            background: linear-gradient(135deg, var(--accent-gold) 0%, var(--accent-copper) 100%);
             border-radius: 50%;
             display: flex;
             align-items: center;
             justify-content: center;
-            box-shadow: 0 4px 20px rgba(37, 211, 102, 0.4);
+            box-shadow: 0 4px 20px rgba(212, 175, 55, 0.3);
             z-index: 99;
             transition: all 0.3s ease;
             text-decoration: none;
+            border: 1px solid rgba(212, 175, 55, 0.3);
         }
 
         .whatsapp-float:hover {
             transform: scale(1.1);
-            box-shadow: 0 6px 30px rgba(37, 211, 102, 0.5);
+            box-shadow: 0 6px 30px rgba(212, 175, 55, 0.5);
         }
 
         .whatsapp-float svg {
             width: 32px;
             height: 32px;
-            fill: white;
+            fill: var(--bg-primary);
         }
 
         /* Mobile Menu */
