Update terms with data processing reference

--- a/terms.html
+++ b/terms.html
@@ -190,12 +190,14 @@
             <li>Respecți drepturile de proprietate intelectuală</li>
         </ul>
         
-        <h2>7. Comunicare</h2>
-        <p>Când mă contactezi prin email sau WhatsApp:</p>
+        <h2>7. Comunicare și Prelucrarea Datelor</h2>
+        <p>Când mă contactezi prin email, WhatsApp sau telefon:</p>
         <ul>
             <li>Răspunsul meu nu creează automat o relație contractuală</li>
             <li>Informațiile pe care le ofer sunt generale și nu constituie consultanță profesională specifică</li>
             <li>Orice acord comercial va fi confirmat în scris separat</li>
+            <li>Datele tale personale (email, număr de telefon, conținutul mesajelor) vor fi prelucrate conform <a href="privacy.html">Politicii de Confidențialitate</a></li>
+            <li>Nu înregistrez apelurile telefonice fără consimțământul tău explicit</li>
         </ul>
         
         <h2>8. Legea aplicabilă</h2>
