Update name to Marius Fit

--- a/terms.html
+++ b/terms.html
@@ -155,7 +155,7 @@
         <p>Pentru orice proiect concret, termenii, prețurile și condițiile vor fi discutate și agreate individual.</p>
         
         <h2>3. Proprietate intelectuală</h2>
-        <p>Tot conținutul acestui site (text, design, grafică, cod, logo) este proprietatea lui Marius sau este folosit cu permisiune/licență corespunzătoare.</p>
+        <p>Tot conținutul acestui site (text, design, grafică, cod, logo) este proprietatea lui Marius Fit sau este folosit cu permisiune/licență corespunzătoare.</p>
         <p>Ai dreptul să:</p>
         <ul>
             <li>Vizualizezi și navighezi pe site</li>
@@ -213,14 +213,14 @@
         <h2>11. Contact</h2>
         <p>Pentru întrebări despre acești termeni:</p>
         <div class="contact-info">
-            <p><strong>Marius</strong></p>
+            <p><strong>Marius Fit</strong></p>
             <p>Email: <a href="mailto:hello@mariusfit.dev">hello@mariusfit.dev</a></p>
             <p>WhatsApp: <a href="https://wa.me/32492087345">+32 492 087 345</a></p>
             <p>Locație: Belgia</p>
         </div>
         
         <footer>
-            <p>© 2024 Marius | <a href="index.html">mariusfit.dev</a> | <a href="privacy.html">Politica de Confidențialitate</a></p>
+            <p>© 2024 Marius Fit | <a href="index.html">mariusfit.dev</a> | <a href="privacy.html">Politica de Confidențialitate</a></p>
         </footer>
     </div>
 </body>
