Replace M. text logo with MF SVG logo in gold/copper theme

--- a/index.html
+++ b/index.html
@@ -74,13 +74,19 @@
         }
 
         .logo {
-            font-family: 'Playfair Display', serif;
-            font-size: 1.5rem;
-            font-weight: 600;
-            background: var(--gradient-warm);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
+            display: flex;
+            align-items: center;
+            text-decoration: none;
+            transition: transform 0.3s ease, opacity 0.3s ease;
+        }
+
+        .logo:hover {
+            transform: scale(1.05);
+            opacity: 0.9;
+        }
+
+        .logo svg {
+            display: block;
         }
 
         .nav-links {
@@ -1095,7 +1101,19 @@
 </head>
 <body>
     <nav>
-        <div class="logo">M.</div>
+        <a href="#" class="logo">
+            <svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <rect x="1" y="1" width="40" height="40" rx="8" stroke="url(#logoGradient)" stroke-width="2" fill="rgba(212, 175, 55, 0.08)"/>
+                <defs>
+                    <linearGradient id="logoGradient" x1="0%" y1="0%" x2="100%" y2="100%">
+                        <stop offset="0%" stop-color="#d4af37"/>
+                        <stop offset="100%" stop-color="#b87333"/>
+                    </linearGradient>
+                </defs>
+                <path d="M10 31V11h2.5l6.5 12 6.5-12H28v20h-3V17l-5.5 10h-1L13 17v14h-3z" fill="url(#logoGradient)"/>
+                <path d="M30 11h-6v2.5h6V11zm0 5h-5v2.5h5V16z" fill="url(#logoGradient)"/>
+            </svg>
+        </a>
         <ul class="nav-links">
             <li><a href="#services" data-translate="nav_services">Servicii</a></li>
             <li><a href="#acasa" data-translate="nav_home">Pentru Acasă</a></li>
