--- a/index.html
+++ b/index.html
@@ -1101,17 +1101,20 @@
 </head>
 <body>
     <nav>
-        <a href="#" class="logo">
-            <svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <rect x="1" y="1" width="40" height="40" rx="8" stroke="url(#logoGradient)" stroke-width="2" fill="rgba(212, 175, 55, 0.08)"/>
+        <a href="#" class="logo" aria-label="Marius Fit - Acasă">
+            <svg width="44" height="44" viewBox="0 0 44 44" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <!-- Background rounded square -->
+                <rect x="2" y="2" width="40" height="40" rx="9" fill="rgba(212, 175, 55, 0.1)" stroke="url(#logoGradient)" stroke-width="2"/>
+                <!-- M letter -->
+                <path d="M10 32V12h3l7 13 7-13h3v20h-4V19l-5 9h-2l-5-9v13h-4z" fill="url(#logoGradient)"/>
+                <!-- F letter overlapping -->
+                <path d="M26 12h8v3h-8v-3zm0 6h6v3h-6v-3z" fill="url(#logoGradient)"/>
                 <defs>
                     <linearGradient id="logoGradient" x1="0%" y1="0%" x2="100%" y2="100%">
                         <stop offset="0%" stop-color="#d4af37"/>
                         <stop offset="100%" stop-color="#b87333"/>
                     </linearGradient>
                 </defs>
-                <path d="M10 31V11h2.5l6.5 12 6.5-12H28v20h-3V17l-5.5 10h-1L13 17v14h-3z" fill="url(#logoGradient)"/>
-                <path d="M30 11h-6v2.5h6V11zm0 5h-5v2.5h5V16z" fill="url(#logoGradient)"/>
             </svg>
         </a>
         <ul class="nav-links">
