Update MF logo with clearer F letter

--- a/index.html
+++ b/index.html
@@ -1102,13 +1102,14 @@
 <body>
     <nav>
         <a href="#" class="logo" aria-label="Marius Fit - Acasă">
-            <svg width="44" height="44" viewBox="0 0 44 44" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg width="46" height="46" viewBox="0 0 46 46" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <!-- Background rounded square -->
-                <rect x="2" y="2" width="40" height="40" rx="9" fill="rgba(212, 175, 55, 0.1)" stroke="url(#logoGradient)" stroke-width="2"/>
-                <!-- M letter -->
-                <path d="M10 32V12h3l7 13 7-13h3v20h-4V19l-5 9h-2l-5-9v13h-4z" fill="url(#logoGradient)"/>
-                <!-- F letter overlapping -->
-                <path d="M26 12h8v3h-8v-3zm0 6h6v3h-6v-3z" fill="url(#logoGradient)"/>
+                <rect x="2" y="2" width="42" height="42" rx="10" fill="rgba(212, 175, 55, 0.08)" stroke="url(#logoGradient)" stroke-width="2"/>
+                <!-- MF combined letters - matching original style -->
+                <path d="M11 34V12h4.5l5.5 11 5.5-11H31v22h-5V21l-4.5 9h-2L15 21v13h-4z" fill="url(#logoGradient)"/>
+                <path d="M31 12v22h-5V12h5z" fill="url(#logoGradient)"/>
+                <path d="M26 12h9v4h-9v-4z" fill="url(#logoGradient)"/>
+                <path d="M26 20h7v4h-7v-4z" fill="url(#logoGradient)"/>
                 <defs>
                     <linearGradient id="logoGradient" x1="0%" y1="0%" x2="100%" y2="100%">
                         <stop offset="0%" stop-color="#d4af37"/>
