MF logo v2 - clearer F shape

--- a/index.html
+++ b/index.html
@@ -1105,11 +1105,10 @@
             <svg width="46" height="46" viewBox="0 0 46 46" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <!-- Background rounded square -->
                 <rect x="2" y="2" width="42" height="42" rx="10" fill="rgba(212, 175, 55, 0.08)" stroke="url(#logoGradient)" stroke-width="2"/>
-                <!-- MF combined letters - matching original style -->
-                <path d="M11 34V12h4.5l5.5 11 5.5-11H31v22h-5V21l-4.5 9h-2L15 21v13h-4z" fill="url(#logoGradient)"/>
-                <path d="M31 12v22h-5V12h5z" fill="url(#logoGradient)"/>
-                <path d="M26 12h9v4h-9v-4z" fill="url(#logoGradient)"/>
-                <path d="M26 20h7v4h-7v-4z" fill="url(#logoGradient)"/>
+                <!-- M letter - stylized like original -->
+                <path d="M9 34V12h5l6 12 1-2V12h5v22h-5V22l-1 2-6 10H9z" fill="url(#logoGradient)"/>
+                <!-- F letter - clear vertical + horizontals -->
+                <path d="M28 12h9v4h-5v4h4v4h-4v10h-4V12z" fill="url(#logoGradient)"/>
                 <defs>
                     <linearGradient id="logoGradient" x1="0%" y1="0%" x2="100%" y2="100%">
                         <stop offset="0%" stop-color="#d4af37"/>
