New MF logo design - clean modern style

--- a/index.html
+++ b/index.html
@@ -1105,10 +1105,12 @@
             <svg width="46" height="46" viewBox="0 0 46 46" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <!-- Background rounded square -->
                 <rect x="2" y="2" width="42" height="42" rx="10" fill="rgba(212, 175, 55, 0.08)" stroke="url(#logoGradient)" stroke-width="2"/>
-                <!-- M letter - stylized like original -->
-                <path d="M9 34V12h5l6 12 1-2V12h5v22h-5V22l-1 2-6 10H9z" fill="url(#logoGradient)"/>
-                <!-- F letter - clear vertical + horizontals -->
-                <path d="M28 12h9v4h-5v4h4v4h-4v10h-4V12z" fill="url(#logoGradient)"/>
+                <!-- M letter - clean modern style -->
+                <path d="M8 34V12h3l7 11 7-11h3v22h-4V20l-6 9.5-6-9.5v14H8z" fill="url(#logoGradient)"/>
+                <!-- F letter - bold and clear -->
+                <path d="M32 12v22h-4V12h4z" fill="url(#logoGradient)"/>
+                <path d="M32 12h6v3.5h-6V12z" fill="url(#logoGradient)"/>
+                <path d="M32 19.5h5v3.5h-5v-3.5z" fill="url(#logoGradient)"/>
                 <defs>
                     <linearGradient id="logoGradient" x1="0%" y1="0%" x2="100%" y2="100%">
                         <stop offset="0%" stop-color="#d4af37"/>
