Change Romanian card to International - open to all clients

--- a/index.html
+++ b/index.html
@@ -1875,9 +1875,9 @@
                     <div class="stat-label" data-translate="stat7_desc">Literalmente și la tech</div>
                 </div>
                 <div class="stat-item reveal">
-                    <div class="stat-icon">🇷🇴</div>
-                    <div class="stat-number" data-translate="stat8_title">Român pentru români</div>
-                    <div class="stat-label" data-translate="stat8_desc">Înțeleg nevoile diasporei</div>
+                    <div class="stat-icon">🌍</div>
+                    <div class="stat-number" data-translate="stat8_title">Deschis internațional</div>
+                    <div class="stat-label" data-translate="stat8_desc">Colaborez cu clienți din toată Europa</div>
                 </div>
                 <div class="stat-item reveal">
                     <div class="stat-icon">☕</div>
@@ -1995,8 +1995,8 @@
                 stat6_desc: "Fără costuri ascunse",
                 stat7_title: "Vorbim aceeași limbă",
                 stat7_desc: "Literalmente și la tech",
-                stat8_title: "Român pentru români",
-                stat8_desc: "Înțeleg nevoile diasporei",
+                stat8_title: "Deschis internațional",
+                stat8_desc: "Colaborez cu clienți din toată Europa",
                 stat9_title: "Proiecte cu suflet",
                 stat9_desc: "Nu doar cod, ci soluții",
                 stat10_title: "Bazat în Belgia",
@@ -2082,8 +2082,8 @@
                 stat6_desc: "Geen verborgen kosten",
                 stat7_title: "We spreken dezelfde taal",
                 stat7_desc: "Letterlijk en in tech",
-                stat8_title: "Roemeen voor Roemenen",
-                stat8_desc: "Ik begrijp de diaspora",
+                stat8_title: "Internationaal open",
+                stat8_desc: "Ik werk met klanten uit heel Europa",
                 stat9_title: "Projecten met ziel",
                 stat9_desc: "Niet alleen code, maar oplossingen",
                 stat10_title: "Gevestigd in België",
@@ -2169,8 +2169,8 @@
                 stat6_desc: "No hidden costs",
                 stat7_title: "We speak the same language",
                 stat7_desc: "Literally and in tech",
-                stat8_title: "Romanian for Romanians",
-                stat8_desc: "I understand diaspora needs",
+                stat8_title: "Internationally open",
+                stat8_desc: "I work with clients across Europe",
                 stat9_title: "Projects with soul",
                 stat9_desc: "Not just code, but solutions",
                 stat10_title: "Based in Belgium",
@@ -2256,8 +2256,8 @@
                 stat6_desc: "Pas de coûts cachés",
                 stat7_title: "On parle la même langue",
                 stat7_desc: "Littéralement et en tech",
-                stat8_title: "Roumain pour Roumains",
-                stat8_desc: "Je comprends la diaspora",
+                stat8_title: "Ouvert internationalement",
+                stat8_desc: "Je travaille avec des clients de toute l'Europe",
                 stat9_title: "Projets avec âme",
                 stat9_desc: "Pas que du code, des solutions",
                 stat10_title: "Basé en Belgique",
