ROLLBACK: Revenire la versiunea funcțională - am stricat ceva în mockup fix

--- a/index.html
+++ b/index.html
@@ -1407,12 +1407,12 @@
             <div class="project-card reveal">
                 <div class="project-image">
                     <div class="project-mockup">
-                        <span data-translate="home_storage_preview_title">📸 Pozele Tale în Siguranță</span><br>
+                        <span style="color: var(--accent-gold)">📸 Pozele Tale în Siguranță</span><br>
                         <span style="color: var(--text-muted)">━━━━━━━━━━━━━━━━━━━</span><br>
-                        <span style="color: var(--accent-copper)">📱</span> <span data-translate="home_storage_preview_1">Sync automat telefon</span><br>
-                        <span style="color: var(--accent-copper)">🌍</span> <span data-translate="home_storage_preview_2">Accesibile de oriunde</span><br>
-                        <span style="color: var(--accent-copper)">🔒</span> <span data-translate="home_storage_preview_3">Nimeni nu le vede</span><br>
-                        <span style="color: var(--accent-copper)">💰</span> <span data-translate="home_storage_preview_4">Fără abonament lunar</span>
+                        <span style="color: var(--accent-copper)">📱</span> Sync automat telefon<br>
+                        <span style="color: var(--accent-copper)">🌍</span> Accesibile de oriunde<br>
+                        <span style="color: var(--accent-copper)">🔒</span> Nimeni nu le vede<br>
+                        <span style="color: var(--accent-copper)">💰</span> Fără abonament lunar
                     </div>
                 </div>
                 <div class="project-content">
@@ -1436,12 +1436,12 @@
             <div class="project-card reveal">
                 <div class="project-image">
                     <div class="project-mockup">
-                        <span data-translate="home_backup_preview_title">💾 Backup Familie</span><br>
+                        <span style="color: var(--accent-gold)">💾 Backup Familie</span><br>
                         <span style="color: var(--text-muted)">━━━━━━━━━━━━━━━━━━━</span><br>
-                        <span style="color: #7cb342">✓</span> <span data-translate="home_backup_preview_1">Salvare automată noapte</span><br>
-                        <span style="color: #7cb342">✓</span> <span data-translate="home_backup_preview_2">Toate telefoanele</span><br>
-                        <span style="color: #7cb342">✓</span> <span data-translate="home_backup_preview_3">Toate laptopurile</span><br>
-                        <span style="color: #7cb342">✓</span> <span data-translate="home_backup_preview_4">Restaurare în 30 min</span>
+                        <span style="color: #7cb342">✓</span> Salvare automată noapte<br>
+                        <span style="color: #7cb342">✓</span> Toate telefoanele<br>
+                        <span style="color: #7cb342">✓</span> Toate laptopurile<br>
+                        <span style="color: #7cb342">✓</span> Restaurare în 30 min
                     </div>
                 </div>
                 <div class="project-content">
@@ -2197,19 +2197,6 @@
                 home_password_benefit2: "",
                 home_password_benefit3: "",
 
-                // HOME Mockup Previews
-                home_storage_preview_title: "",
-                home_storage_preview_1: "",
-                home_storage_preview_2: "",
-                home_storage_preview_3: "",
-                home_storage_preview_4: "",
-                ,
-                home_backup_preview_title: "",
-                home_backup_preview_1: "",
-                home_backup_preview_2: "",
-                home_backup_preview_3: "",
-                home_backup_preview_4: "",
-
                 // BUSINESS Cards (new),
                 business_collab_category: "",
                 business_collab_title: "",
@@ -2450,19 +2437,6 @@
                 home_password_benefit1: "Sterke wachtwoorden automatisch gegenereerd",
                 home_password_benefit2: "Synchronisatie op alle apparaten",
                 home_password_benefit3: "Volledige controle over je gegevens",
-
-                // HOME Mockup Previews
-                home_storage_preview_title: "📸 Jouw Foto's Veilig",
-                home_storage_preview_1: "Automatische telefoon sync",
-                home_storage_preview_2: "Overal toegankelijk",
-                home_storage_preview_3: "Niemand ziet ze",
-                home_storage_preview_4: "Geen maandabonnement",
-                ,
-                home_backup_preview_title: "💾 Familie Backup",
-                home_backup_preview_1: "Automatische backup 's nachts",
-                home_backup_preview_2: "Alle telefoons",
-                home_backup_preview_3: "Alle laptops",
-                home_backup_preview_4: "Herstel in 30 min",
 
                 // BUSINESS Cards (new),
                 business_collab_category: "Samenwerking",
@@ -2705,19 +2679,6 @@
                 home_password_benefit2: "Sync across all devices",
                 home_password_benefit3: "Complete control over your data",
 
-                // HOME Mockup Previews
-                home_storage_preview_title: "📸 Your Photos Safe",
-                home_storage_preview_1: "Auto phone sync",
-                home_storage_preview_2: "Accessible anywhere",
-                home_storage_preview_3: "Nobody sees them",
-                home_storage_preview_4: "No monthly subscription",
-                ,
-                home_backup_preview_title: "💾 Family Backup",
-                home_backup_preview_1: "Automatic night backup",
-                home_backup_preview_2: "All phones",
-                home_backup_preview_3: "All laptops",
-                home_backup_preview_4: "Restore in 30 min",
-
                 // BUSINESS Cards (new),
                 business_collab_category: "Collaboration",
                 business_collab_title: "One place for all documents",
@@ -2958,19 +2919,6 @@
                 home_password_benefit1: "Mots de passe forts générés automatiquement",
                 home_password_benefit2: "Synchronisation sur tous les appareils",
                 home_password_benefit3: "Contrôle total sur vos données",
-
-                // HOME Mockup Previews
-                home_storage_preview_title: "📸 Vos Photos en Sécurité",
-                home_storage_preview_1: "Sync auto téléphone",
-                home_storage_preview_2: "Accessible partout",
-                home_storage_preview_3: "Personne ne les voit",
-                home_storage_preview_4: "Sans abonnement mensuel",
-                ,
-                home_backup_preview_title: "💾 Sauvegarde Famille",
-                home_backup_preview_1: "Sauvegarde auto la nuit",
-                home_backup_preview_2: "Tous les téléphones",
-                home_backup_preview_3: "Tous les ordinateurs",
-                home_backup_preview_4: "Restauration en 30 min",
 
                 // BUSINESS Cards (new),
                 business_collab_category: "Collaboration",
