TEST SIGUR: Mockup tradus pentru CARD 1 (Storage) - folosind str.replace()

--- a/index.html
+++ b/index.html
@@ -1407,12 +1407,12 @@
             <div class="project-card reveal">
                 <div class="project-image">
                     <div class="project-mockup">
-                        <span style="color: var(--accent-gold)">📸 Pozele Tale în Siguranță</span><br>
+                        <span style="color: var(--accent-gold)" data-translate="mockup_storage_title">📸 Pozele Tale în Siguranță</span><br>
                         <span style="color: var(--text-muted)">━━━━━━━━━━━━━━━━━━━</span><br>
-                        <span style="color: var(--accent-copper)">📱</span> Sync automat telefon<br>
-                        <span style="color: var(--accent-copper)">🌍</span> Accesibile de oriunde<br>
-                        <span style="color: var(--accent-copper)">🔒</span> Nimeni nu le vede<br>
-                        <span style="color: var(--accent-copper)">💰</span> Fără abonament lunar
+                        <span style="color: var(--accent-copper)">📱</span> <span data-translate="mockup_storage_line1">Sync automat telefon</span><br>
+                        <span style="color: var(--accent-copper)">🌍</span> <span data-translate="mockup_storage_line2">Accesibile de oriunde</span><br>
+                        <span style="color: var(--accent-copper)">🔒</span> <span data-translate="mockup_storage_line3">Nimeni nu le vede</span><br>
+                        <span style="color: var(--accent-copper)">💰</span> <span data-translate="mockup_storage_line4">Fără abonament lunar</span>
                     </div>
                 </div>
                 <div class="project-content">
@@ -2197,6 +2197,13 @@
                 home_password_benefit2: "",
                 home_password_benefit3: "",
 
+                // HOME Mockups
+                                mockup_storage_title: "📸 Jouw Foto's Veilig",
+                mockup_storage_line1: "Automatische telefoon sync",
+                mockup_storage_line2: "Overal toegankelijk",
+                mockup_storage_line3: "Niemand ziet ze",
+                mockup_storage_line4: "Geen maandabonnement",
+
                 // BUSINESS Cards (new),
                 business_collab_category: "",
                 business_collab_title: "",
@@ -2438,6 +2445,13 @@
                 home_password_benefit2: "Synchronisatie op alle apparaten",
                 home_password_benefit3: "Volledige controle over je gegevens",
 
+                // HOME Mockups
+                                mockup_storage_title: "📸 Your Photos Safe",
+                mockup_storage_line1: "Auto phone sync",
+                mockup_storage_line2: "Accessible anywhere",
+                mockup_storage_line3: "Nobody sees them",
+                mockup_storage_line4: "No monthly subscription",
+
                 // BUSINESS Cards (new),
                 business_collab_category: "Samenwerking",
                 business_collab_title: "Eén centrale plek voor alle documenten",
@@ -2678,6 +2692,13 @@
                 home_password_benefit1: "Strong passwords auto-generated",
                 home_password_benefit2: "Sync across all devices",
                 home_password_benefit3: "Complete control over your data",
+
+                // HOME Mockups
+                                mockup_storage_title: "📸 Vos Photos en Sécurité",
+                mockup_storage_line1: "Sync auto téléphone",
+                mockup_storage_line2: "Accessible partout",
+                mockup_storage_line3: "Personne ne les voit",
+                mockup_storage_line4: "Sans abonnement mensuel",
 
                 // BUSINESS Cards (new),
                 business_collab_category: "Collaboration",
