FIX URGENT: Corectat traducerile încrucișate - NL avea EN, EN avea FR

--- a/index.html
+++ b/index.html
@@ -2446,11 +2446,11 @@
                 home_password_benefit3: "Volledige controle over je gegevens",
 
                 // HOME Mockups
-                                mockup_storage_title: "📸 Your Photos Safe",
-                mockup_storage_line1: "Auto phone sync",
-                mockup_storage_line2: "Accessible anywhere",
-                mockup_storage_line3: "Nobody sees them",
-                mockup_storage_line4: "No monthly subscription",
+                mockup_storage_title: "📸 Jouw Foto's Veilig",
+                mockup_storage_line1: "Automatische telefoon sync",
+                mockup_storage_line2: "Overal toegankelijk",
+                mockup_storage_line3: "Niemand ziet ze",
+                mockup_storage_line4: "Geen maandabonnement",
 
                 // BUSINESS Cards (new),
                 business_collab_category: "Samenwerking",
@@ -2694,11 +2694,11 @@
                 home_password_benefit3: "Complete control over your data",
 
                 // HOME Mockups
-                                mockup_storage_title: "📸 Vos Photos en Sécurité",
-                mockup_storage_line1: "Sync auto téléphone",
-                mockup_storage_line2: "Accessible partout",
-                mockup_storage_line3: "Personne ne les voit",
-                mockup_storage_line4: "Sans abonnement mensuel",
+                mockup_storage_title: "📸 Your Photos Safe",
+                mockup_storage_line1: "Auto phone sync",
+                mockup_storage_line2: "Accessible anywhere",
+                mockup_storage_line3: "Nobody sees them",
+                mockup_storage_line4: "No monthly subscription",
 
                 // BUSINESS Cards (new),
                 business_collab_category: "Collaboration",
