FINAL: Toate mockup-urile traduse (16 carduri: 8 HOME + 8 BUSINESS) - titluri în NL/EN/FR

--- a/index.html
+++ b/index.html
@@ -1436,7 +1436,7 @@
             <div class="project-card reveal">
                 <div class="project-image">
                     <div class="project-mockup">
-                        <span style="color: var(--accent-gold)">💾 Backup Familie</span><br>
+                        <span style="color: var(--accent-gold)" data-translate="mockup_home_backup_title">💾 Backup Familie</span><br>
                         <span style="color: var(--text-muted)">━━━━━━━━━━━━━━━━━━━</span><br>
                         <span style="color: #7cb342">✓</span> Salvare automată noapte<br>
                         <span style="color: #7cb342">✓</span> Toate telefoanele<br>
@@ -1464,7 +1464,7 @@
             <div class="project-card reveal">
                 <div class="project-image">
                     <div class="project-mockup">
-                        <span style="color: var(--accent-gold)">🎬 Filme și Seriale</span><br>
+                        <span style="color: var(--accent-gold)" data-translate="mockup_home_media_title">🎬 Filme și Seriale</span><br>
                         <span style="color: var(--text-muted)">━━━━━━━━━━━━━━━━━━━</span><br>
                         <span style="color: var(--accent-copper)">📺</span> Pe TV, telefon, tabletă<br>
                         <span style="color: var(--accent-copper)">👨‍👩‍👧‍👦</span> Conturi pentru fiecare<br>
@@ -1493,7 +1493,7 @@
             <div class="project-card reveal">
                 <div class="project-image">
                     <div class="project-mockup">
-                        <span style="color: var(--accent-gold)">🛡️ Protecție Familie</span><br>
+                        <span style="color: var(--accent-gold)" data-translate="mockup_home_dns_title">🛡️ Protecție Familie</span><br>
                         <span style="color: var(--text-muted)">━━━━━━━━━━━━━━━━━━━</span><br>
                         <span style="color: var(--accent-copper)">🚫</span> Fără reclame pe net<br>
                         <span style="color: var(--accent-copper)">👶</span> Copiii protejați online<br>
@@ -1522,7 +1522,7 @@
             <div class="project-card reveal">
                 <div class="project-image">
                     <div class="project-mockup">
-                        <span style="color: var(--accent-gold)">📹 Camere Inteligente</span><br>
+                        <span style="color: var(--accent-gold)" data-translate="mockup_home_cctv_title">📹 Camere Inteligente</span><br>
                         <span style="color: var(--text-muted)">━━━━━━━━━━━━━━━━━━━</span><br>
                         <span style="color: var(--accent-copper)">🤖</span> Știe cine e la ușă<br>
                         <span style="color: var(--accent-copper)">🚗</span> Recunoaște mașinile<br>
@@ -1551,7 +1551,7 @@
             <div class="project-card reveal">
                 <div class="project-image">
                     <div class="project-mockup">
-                        <span style="color: var(--accent-gold)">🌍 Acces de Oriunde</span><br>
+                        <span style="color: var(--accent-gold)" data-translate="mockup_home_remote_title">🌍 Acces de Oriunde</span><br>
                         <span style="color: var(--text-muted)">━━━━━━━━━━━━━━━━━━━</span><br>
                         <span style="color: #7cb342">✓</span> Ești în România? Merge<br>
                         <span style="color: #7cb342">✓</span> Ești în vacanță? Merge<br>
@@ -1579,7 +1579,7 @@
             <div class="project-card reveal">
                 <div class="project-image">
                     <div class="project-mockup">
-                        <span style="color: var(--accent-gold)">🏠 Casă Inteligentă</span><br>
+                        <span style="color: var(--accent-gold)" data-translate="mockup_home_automation_title">🏠 Casă Inteligentă</span><br>
                         <span style="color: var(--text-muted)">━━━━━━━━━━━━━━━━━━━</span><br>
                         <span style="color: var(--accent-copper)">💡</span> Lumini automate<br>
                         <span style="color: var(--accent-copper)">🌡️</span> Termostat inteligent<br>
@@ -1607,7 +1607,7 @@
             <div class="project-card reveal">
                 <div class="project-image">
                     <div class="project-mockup">
-                        <span style="color: var(--accent-gold)">🔐 Parolele Tale</span><br>
+                        <span style="color: var(--accent-gold)" data-translate="mockup_home_password_title">🔐 Parolele Tale</span><br>
                         <span style="color: var(--text-muted)">━━━━━━━━━━━━━━━━━━━</span><br>
                         <span style="color: #7cb342">✓</span> Toate într-un loc sigur<br>
                         <span style="color: #7cb342">✓</span> Se completează singure<br>
@@ -1658,7 +1658,7 @@
             <div class="project-card reveal">
                 <div class="project-image">
                     <div class="project-mockup">
-                        <span style="color: var(--accent-gold)">💾 Backup Automat Firmă</span><br>
+                        <span style="color: var(--accent-gold)" data-translate="mockup_business_backup_title">💾 Backup Automat Firmă</span><br>
                         <span style="color: var(--text-muted)">━━━━━━━━━━━━━━━━━━━</span><br>
                         <span style="color: #7cb342">✓</span> Salvare zilnică automată<br>
                         <span style="color: #7cb342">✓</span> Toate calculatoarele<br>
@@ -1686,7 +1686,7 @@
             <div class="project-card reveal">
                 <div class="project-image">
                     <div class="project-mockup">
-                        <span style="color: var(--accent-gold)">📧 Email @firma-ta.be</span><br>
+                        <span style="color: var(--accent-gold)" data-translate="mockup_business_email_title">📧 Email @firma-ta.be</span><br>
                         <span style="color: var(--text-muted)">━━━━━━━━━━━━━━━━━━━</span><br>
                         <span style="color: var(--accent-copper)">💰</span> Plătești o dată, nu lunar<br>
                         <span style="color: var(--accent-copper)">📦</span> Spațiu nelimitat<br>
@@ -1767,7 +1767,7 @@
             <div class="project-card reveal">
                 <div class="project-image">
                     <div class="project-mockup">
-                        <span style="color: var(--accent-gold)">🔒 Conexiune Securizată</span><br>
+                        <span style="color: var(--accent-gold)" data-translate="mockup_business_vpn_title">🔒 Conexiune Securizată</span><br>
                         <span style="color: var(--text-muted)">━━━━━━━━━━━━━━━━━━━</span><br>
                         <span style="color: var(--accent-copper)">👨‍💼</span> Echipă remote protejată<br>
                         <span style="color: var(--accent-copper)">📁</span> Acces la dosare interne<br>
@@ -1795,7 +1795,7 @@
             <div class="project-card reveal">
                 <div class="project-image">
                     <div class="project-mockup">
-                        <span style="color: var(--accent-gold)">📹 Supraveghere Firmă</span><br>
+                        <span style="color: var(--accent-gold)" data-translate="mockup_business_cctv_title">📹 Supraveghere Firmă</span><br>
                         <span style="color: var(--text-muted)">━━━━━━━━━━━━━━━━━━━</span><br>
                         <span style="color: var(--accent-copper)">🏪</span> Magazin, depozit, birou<br>
                         <span style="color: var(--accent-copper)">📱</span> Vezi de pe telefon<br>
@@ -1823,7 +1823,7 @@
             <div class="project-card reveal">
                 <div class="project-image">
                     <div class="project-mockup">
-                        <span style="color: var(--accent-gold)">🌐 Website Profesional</span><br>
+                        <span style="color: var(--accent-gold)" data-translate="mockup_business_website_title">🌐 Website Profesional</span><br>
                         <span style="color: var(--text-muted)">━━━━━━━━━━━━━━━━━━━</span><br>
                         <span style="color: #7cb342">✓</span> Arată bine pe telefon<br>
                         <span style="color: #7cb342">✓</span> Apare în căutări locale<br>
@@ -1851,7 +1851,7 @@
             <div class="project-card reveal">
                 <div class="project-image">
                     <div class="project-mockup">
-                        <span style="color: var(--accent-gold)">🎫 Vânzare Bilete</span><br>
+                        <span style="color: var(--accent-gold)" data-translate="mockup_business_events_title">🎫 Vânzare Bilete</span><br>
                         <span style="color: var(--text-muted)">━━━━━━━━━━━━━━━━━━━</span><br>
                         <span style="color: var(--accent-copper)">💳</span> Plată online directă<br>
                         <span style="color: var(--accent-copper)">📍</span> Clientul alege locul<br>
@@ -1879,7 +1879,7 @@
             <div class="project-card reveal full-width">
                 <div class="project-image business-image">
                     <div class="project-mockup">
-                        <span style="color: var(--accent-gold)">⚡ Automatizări pentru Firma Ta</span><br>
+                        <span style="color: var(--accent-gold)" data-translate="mockup_business_automation_title">⚡ Automatizări pentru Firma Ta</span><br>
                         <span style="color: var(--text-muted)">━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</span><br><br>
                         <span style="color: var(--accent-copper)">📊 Clienți & Comenzi</span> - Vezi tot într-un singur loc<br>
                         <span style="color: var(--accent-copper)">📅 Programări Online</span> - Clientul își face singur rezervare<br>
@@ -2204,6 +2204,22 @@
                 mockup_storage_line3: "Niemand ziet ze",
                 mockup_storage_line4: "Geen maandabonnement",
 
+                // Additional Mockups (Cards 2-17)
+                mockup_home_backup_title: "💾 Familie Backup",
+                mockup_home_media_title: "🎬 Films en Series",
+                mockup_home_dns_title: "🛡️ Gezinsbescherming",
+                mockup_home_cctv_title: "📹 Slimme Camera's",
+                mockup_home_remote_title: "🌍 Toegang van Overal",
+                mockup_home_automation_title: "🏠 Slim Huis",
+                mockup_home_password_title: "🔐 Jouw Wachtwoorden",
+                mockup_business_backup_title: "💾 Bedrijf Backup",
+                mockup_business_email_title: "📧 Email @jouw-bedrijf.be",
+                mockup_business_vpn_title: "🔒 Beveiligde Verbinding",
+                mockup_business_cctv_title: "📹 Bedrijfsbewaking",
+                mockup_business_website_title: "🌐 Professionele Website",
+                mockup_business_events_title: "🎫 Ticketverkoop",
+                mockup_business_automation_title: "⚡ Automatisering voor je Bedrijf",
+
                 // BUSINESS Cards (new),
                 business_collab_category: "",
                 business_collab_title: "",
@@ -2452,6 +2468,22 @@
                 mockup_storage_line3: "Niemand ziet ze",
                 mockup_storage_line4: "Geen maandabonnement",
 
+                // Additional Mockups (Cards 2-17)
+                mockup_home_backup_title: "💾 Family Backup",
+                mockup_home_media_title: "🎬 Movies and Series",
+                mockup_home_dns_title: "🛡️ Family Protection",
+                mockup_home_cctv_title: "📹 Smart Cameras",
+                mockup_home_remote_title: "🌍 Access from Anywhere",
+                mockup_home_automation_title: "🏠 Smart House",
+                mockup_home_password_title: "🔐 Your Passwords",
+                mockup_business_backup_title: "💾 Business Backup",
+                mockup_business_email_title: "📧 Email @your-company.be",
+                mockup_business_vpn_title: "🔒 Secure Connection",
+                mockup_business_cctv_title: "📹 Business Surveillance",
+                mockup_business_website_title: "🌐 Professional Website",
+                mockup_business_events_title: "🎫 Ticket Sales",
+                mockup_business_automation_title: "⚡ Automation for Your Business",
+
                 // BUSINESS Cards (new),
                 business_collab_category: "Samenwerking",
                 business_collab_title: "Eén centrale plek voor alle documenten",
@@ -2699,6 +2731,22 @@
                 mockup_storage_line2: "Accessible anywhere",
                 mockup_storage_line3: "Nobody sees them",
                 mockup_storage_line4: "No monthly subscription",
+
+                // Additional Mockups (Cards 2-17)
+                mockup_home_backup_title: "💾 Sauvegarde Famille",
+                mockup_home_media_title: "🎬 Films et Séries",
+                mockup_home_dns_title: "🛡️ Protection Familiale",
+                mockup_home_cctv_title: "📹 Caméras Intelligentes",
+                mockup_home_remote_title: "🌍 Accès de Partout",
+                mockup_home_automation_title: "🏠 Maison Intelligente",
+                mockup_home_password_title: "🔐 Vos Mots de Passe",
+                mockup_business_backup_title: "💾 Sauvegarde Entreprise",
+                mockup_business_email_title: "📧 Email @votre-entreprise.be",
+                mockup_business_vpn_title: "🔒 Connexion Sécurisée",
+                mockup_business_cctv_title: "📹 Surveillance Entreprise",
+                mockup_business_website_title: "🌐 Site Web Professionnel",
+                mockup_business_events_title: "🎫 Vente de Billets",
+                mockup_business_automation_title: "⚡ Automatisation pour Votre Entreprise",
 
                 // BUSINESS Cards (new),
                 business_collab_category: "Collaboration",
