--- a/index.html
+++ b/index.html
@@ -2634,6 +2634,56 @@
                 mockup_business_events_title: "🎫 Ticket Sales",
                 mockup_business_automation_title: "⚡ Automation for Your Business",
 
+                // Mockup Lines
+                mockup_home_backup_line1: "Automatic night backup",
+                mockup_home_backup_line2: "All phones",
+                mockup_home_backup_line3: "All laptops",
+                mockup_home_backup_line4: "Restore in 30 min",
+                mockup_home_media_line1: "On TV, phone, tablet",
+                mockup_home_media_line2: "Account for everyone",
+                mockup_home_media_line3: "Looks like Netflix",
+                mockup_home_media_line4: "On vacation? Works there too",
+                mockup_home_dns_line1: "No ads online",
+                mockup_home_dns_line2: "Kids protected online",
+                mockup_home_dns_line3: "TV without ads",
+                mockup_home_dns_line4: "All devices",
+                mockup_home_cctv_line1: "Knows who's at the door",
+                mockup_home_cctv_line2: "Recognizes cars",
+                mockup_home_cctv_line3: "Phone alerts",
+                mockup_home_cctv_line4: "Recordings 30+ days",
+                mockup_home_remote_line1: "In Romania? Works",
+                mockup_home_remote_line2: "On vacation? Works",
+                mockup_home_remote_line3: "View home cameras",
+                mockup_home_remote_line4: "Access any file",
+                mockup_home_automation_line1: "Automatic lights",
+                mockup_home_automation_line2: "Smart thermostat",
+                mockup_home_automation_line3: "Controlled outlets",
+                mockup_home_automation_line4: "Everything from one app",
+                mockup_home_password_line1: "All in one safe place",
+                mockup_home_password_line2: "Fill themselves",
+                mockup_home_password_line3: "Share with family",
+                mockup_home_password_line4: "No subscription",
+                mockup_business_backup_line1: "Automatic daily backup",
+                mockup_business_backup_line2: "All computers",
+                mockup_business_backup_line3: "Restore in 30 min",
+                mockup_business_backup_line4: "Ransomware protection",
+                mockup_business_email_line1: "Pay once, not monthly",
+                mockup_business_email_line2: "Unlimited space",
+                mockup_business_email_line3: "Data stays in BE",
+                mockup_business_email_line4: "As many employees as you want",
+                mockup_business_remote_line1: "Employee works remotely",
+                mockup_business_remote_line2: "Data stays with company",
+                mockup_business_remote_line3: "Laptop stolen? No problem",
+                mockup_business_remote_line4: "100% secured",
+                mockup_business_website_line1: "Looks good on phone",
+                mockup_business_website_line2: "Appears in local searches",
+                mockup_business_website_line3: "Fully legal for BE",
+                mockup_business_website_line4: "Fast and professional",
+                mockup_business_events_line1: "Direct online payment",
+                mockup_business_events_line2: "Customer chooses seat",
+                mockup_business_events_line3: "Ticket auto by email",
+                mockup_business_events_line4: "View sales live",
+
                 // BUSINESS Cards (new),
                 business_collab_category: "Samenwerking",
                 business_collab_title: "Eén centrale plek voor alle documenten",
@@ -2897,6 +2947,56 @@
                 mockup_business_website_title: "🌐 Site Web Professionnel",
                 mockup_business_events_title: "🎫 Vente de Billets",
                 mockup_business_automation_title: "⚡ Automatisation pour Votre Entreprise",
+
+                // Mockup Lines
+                mockup_home_backup_line1: "Sauvegarde auto la nuit",
+                mockup_home_backup_line2: "Tous les téléphones",
+                mockup_home_backup_line3: "Tous les ordinateurs",
+                mockup_home_backup_line4: "Restauration en 30 min",
+                mockup_home_media_line1: "Sur TV, téléphone, tablette",
+                mockup_home_media_line2: "Compte pour chacun",
+                mockup_home_media_line3: "Ressemble à Netflix",
+                mockup_home_media_line4: "En vacances? Fonctionne là aussi",
+                mockup_home_dns_line1: "Pas de publicités en ligne",
+                mockup_home_dns_line2: "Enfants protégés en ligne",
+                mockup_home_dns_line3: "TV sans publicités",
+                mockup_home_dns_line4: "Tous les appareils",
+                mockup_home_cctv_line1: "Sait qui est à la porte",
+                mockup_home_cctv_line2: "Reconnaît les voitures",
+                mockup_home_cctv_line3: "Alerte sur téléphone",
+                mockup_home_cctv_line4: "Enregistrements 30+ jours",
+                mockup_home_remote_line1: "En Roumanie? Fonctionne",
+                mockup_home_remote_line2: "En vacances? Fonctionne",
+                mockup_home_remote_line3: "Voir caméras maison",
+                mockup_home_remote_line4: "Accéder à tout fichier",
+                mockup_home_automation_line1: "Lumières automatiques",
+                mockup_home_automation_line2: "Thermostat intelligent",
+                mockup_home_automation_line3: "Prises contrôlées",
+                mockup_home_automation_line4: "Tout depuis une app",
+                mockup_home_password_line1: "Tout en un endroit sûr",
+                mockup_home_password_line2: "Se remplissent seuls",
+                mockup_home_password_line3: "Partagez avec la famille",
+                mockup_home_password_line4: "Sans abonnement",
+                mockup_business_backup_line1: "Sauvegarde quotidienne auto",
+                mockup_business_backup_line2: "Tous les ordinateurs",
+                mockup_business_backup_line3: "Restauration en 30 min",
+                mockup_business_backup_line4: "Protection ransomware",
+                mockup_business_email_line1: "Payez une fois, pas mensuel",
+                mockup_business_email_line2: "Espace illimité",
+                mockup_business_email_line3: "Données restent en BE",
+                mockup_business_email_line4: "Autant d'employés que vous voulez",
+                mockup_business_remote_line1: "Employé travaille à distance",
+                mockup_business_remote_line2: "Données restent chez l'entreprise",
+                mockup_business_remote_line3: "Ordinateur volé? Pas de problème",
+                mockup_business_remote_line4: "100% sécurisé",
+                mockup_business_website_line1: "Beau sur téléphone",
+                mockup_business_website_line2: "Apparaît dans recherches locales",
+                mockup_business_website_line3: "Totalement légal pour BE",
+                mockup_business_website_line4: "Rapide et professionnel",
+                mockup_business_events_line1: "Paiement en ligne direct",
+                mockup_business_events_line2: "Client choisit la place",
+                mockup_business_events_line3: "Billet auto par email",
+                mockup_business_events_line4: "Voir ventes en direct",
 
                 // BUSINESS Cards (new),
                 business_collab_category: "Collaboration",
